fix spacing

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -299,7 +299,7 @@ components
     font-size: 0.75rem;
     opacity: 0.5;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(6rem, 2fr));
+    grid-template-columns: repeat(auto-fill, minmax(3rem, 6rem));
 }
 
 /*child detail*/
